--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sample",
   "private": true,
   "dependencies": {
-    "bootstrap": "3"
+    "bootstrap": "3",
+    "jquery": "^3.3.1"
   }
 }
